WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251396
Regression(ScreenOrientation API) Fullscreen exits right away on Youtube
https://bugs.webkit.org/show_bug.cgi?id=251396
Summary
Regression(ScreenOrientation API) Fullscreen exits right away on Youtube
Chris Dumez
Reported
2023-01-30 14:46:07 PST
Fullscreen exits right away on Youtube since we've enabled the Screen Orientation API.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-01-30 14:46:48 PST
<
rdar://104269674
>
Chris Dumez
Comment 2
2023-01-30 14:56:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9349
EWS
Comment 3
2023-02-01 07:15:51 PST
Committed
259678@main
(914c16e8facc): <
https://commits.webkit.org/259678@main
> Reviewed commits have been landed. Closing PR #9349 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug